...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arnote_menu.png" translatesAutoresizingMaskIntoConstraints="NO" id="IzH-jR-buD">
                                        <rect key="frame" x="99" y="63" width="192" height="190"/>
                                        <accessibility key="accessibilityConfiguration" label="arnote_menu">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                <rect key="frame" x="61.666666666666657" y="316" width="267" height="158"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="EmailTextFieldLogin" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="teszt@gmail.cím" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SaE-2n-vsB" userLabel="EmailTextFieldLogin">
                                        <rect key="frame" x="0.0" y="42" width="268" height="34"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Giu-LB-I8Y">
                                        <rect key="frame" x="0.0" y="88" width="74" height="21"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="teszt123" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Alk-7y-jyk" userLabel="PasswordTextField">
                                        <rect key="frame" x="0.0" y="124" width="268" height="34"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyg-Jp-s1U">
                                        <rect key="frame" x="0.0" y="8" width="41" height="21"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="268" height="46"/>
                                                <color key="backgroundColor" systemColor="systemRedColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LoginButton" label="LoginButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="46" id="41f-7H-e10"/>
                                                    <constraint firstAttribute="width" constant="268" id="9V8-u4-aGL"/>
                                                </constraints>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mE1-MM-zpl" userLabel="GoToRegistrationButton">
                                                <rect key="frame" x="0.0" y="46" width="268" height="63"/>
                                                <accessibility key="accessibilityConfiguration" identifier="GoToRegistration" label="GoToRegistration">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
...
                                                    <constraint firstAttribute="width" constant="268" id="cPP-Rq-lRw"/>
                                                </constraints>
                                                <state key="normal" title="Don't have an account? Register!">
                                                    <color key="titleColor" red="0.069370516588004527" green="0.14134349908680199" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                <rect key="frame" x="61.666666666666657" y="273.66666666666669" width="267" height="243.00000000000006"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kj1-s6-vlC" userLabel="EmailTextField">
                                        <rect key="frame" x="0.0" y="42" width="268" height="34"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="EmailTextFieldRegister" label="EmailTextFieldRegister"/>
                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordTitleRegister" label="PasswordTitleRegister"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
